# caliptra-rtl

./: .copy_file.swp  .git-comodules  .gitignore  .gitmodules  CONTRIBUTING.md  CaliptraIntegrationSpecification.md  Coming_soon.txt  NV_SetUpEnv.md  README.md  Release_Notes.md  Release_notes.txt  VERSION.txt  caliptra-malicious-fw-threat-analysis.md  cfi_proposal.txt  flake.nix  iccm_hash_plan.md  index.html  logfile  requirements.txt  rfc-kv-transition-enforcement.md  test_organization_plan.md
.dvt/: build.config.xml  default.build  default.build.auto.1  default.ls
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: rtl-rfc-issue-template.md  rtl-trademark-exemption-template.md
.github/scripts/: build_tests_matrix.py  file_hash.sh  gdb_test.sh  licenseHeaderCheck.sh  license_header_check.sh  openocd_test.sh  pr_rdl_check.sh  rtl_hash.sh  stamp_repo.sh  utils.sh
.github/workflow_metadata/: README.md  file_list_stamped.txt  pr_hash  pr_timestamp
.github/workflows/: build-test-verilator.yml  ci.yml  doc-gen.yml  interactive-debugging.yml  pre-run-check.yml  publish-regression-results.yml  pull_request.yml
SCA/Caliptra_ECDSA_project_sign/: ECDSA_Masking.docx
SCA/common_python_scripts/: my_functions.py
config/: compilespecs.yml  repo_config.json
coverage/config/: aes_caliptra_tb.yml  caliptra_cov_cfg.yml  caliptra_cov_cfg_both.yml  caliptra_merge_bench_cov_cfg.yml  caliptra_top_tb.yml  clp_mapfile  csrng_caliptra_tb.yml  datavault_caliptra_tb.yml  doe_caliptra_tb.yml  doe_core_cbc_tb.yml  ecc_top_tb.yml  edn_caliptra_tb.yml  entropy_src_caliptra_tb.yml  hmac_ctrl_tb.yml  hmac_drbg_caliptra_tb.yml  keyvault_caliptra_tb.yml  kmac_caliptra_tb.yml  lc_ctrl_caliptra_tb.yml  prim_caliptra_tb.yml  prim_generic_caliptra_tb.yml  sha256_caliptra_tb.yml  sha256_ctrl_tb.yml  sha512_ctrl_32bit_tb.yml  sha512_masked_caliptra_tb.yml  soc_ifc_caliptra_tb.yml  soc_ifc_tb.yml  uart_caliptra_tb.yml  uvmf_caliptra_top.yml  uvmf_caliptra_top_itrng.yml  uvmf_caliptra_top_tb.yml  uvmf_ecc.yml  uvmf_hmac.yml  uvmf_pv.yml  uvmf_sha512.yml
directed/: index.html
docs/: CaliptraHardwareSpecification.md  CaliptraIntegrationSpecification.md  CaliptraPreReleaseTestPlan.md  CaliptraReleaseChecklist.md  CaliptraStyleGuide.md  Caliptra_Gen2_TestPlan.xlsx  Caliptra_Gen2p1_TestPlan.xlsx  Caliptra_TestPlan.xlsx  Caliptra_rtl.md  Caliptra_rtl_verification.md
docs/images/: Thumbs.db
etc/: eda.bashrc  setup.bashrc
etc/pipelines/: coverage-pipeline-launch.yml  coverage-pipeline.yml  github-nightly-directed-pipeline.yml  github-nightly-random-pipeline.yml  nightly-directed-pipeline.yml  nightly-pipeline.yml  nightly-random-mldsa-pipeline.yml  nightly-random-pipeline.yml  post-force-pipeline.yml  promote-pipeline.yml
nightly-results-main/: index.html
nightly-results-main/directed/: index.html
nightly-results-main/random/: index.html
random/: index.html
src/doe/: readme.md
src/hmac/formal/model/simulation_model/simulation/: CMakeLists.txt  hmac_main.cpp  hmac_tests.h  hmac_vectors_singleblk.txt
src/integration/: .gitignore  README.md
src/soc_ifc/: .gitignore
src/syn/: README  dc.tcl
tools/: README  generate_rtl_diffs.sh
tools/audit/: generate_rtl_diffs.sh
tools/dv-classes/: README.md
tools/dvsim/: common_project_cfg.hjson  common_sim_cfg.hjson  fusesoc.hjson  sim.mk  vcs.hjson  xcelium.hjson
tools/dvsim/python/: default.nix  pyproject.toml
tools/scripts/: Makefile  README.md  commitChangesToGitHub.sh  demo.rdl  gen_caliptra_top_regression_ymls.py  gen_pb_file_lists.sh  gen_pb_file_lists_abr.sh  gen_pb_file_lists_caliptra_ss.sh  gen_soc_ifc_covergroups.py  github_sync.py  hex_to_uint32_converter.py  integration_vector_gen.py  licenseHeaderCheck.sh  ot_dir_cp.sh  prepADORepo.sh  prepDestRepo.sh  prepGitHubRepo.sh  prepPBSrcRepo.sh  promote_create_abr_merge_branch.sh  promote_create_cptra_ss_merge_branch.sh  promote_create_merge_branch.sh  promote_file_list_check.sh  promote_rdl_check.sh  promote_stamp_target_abr_branch.sh  promote_stamp_target_branch.sh  promote_stamp_target_cptra_ss_branch.sh  rdl_post_process.py  reg_doc_gen.py  reg_doc_gen.sh  reg_gen.py  reg_gen.sh  reg_json.py  run_test_makefile  run_verilator_l0_regression.py  sim_config_parse.py  sparse_fsm_encode.py  (+2 more)
tools/scripts/python/: default.nix  pyproject.toml
(+7066 files in other folders)
