# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

[project]
name = "caliptra-dvsim"
version = "0.0.0"
description = "Open-source hardware root-of-trust"
requires-python = ">=3.10, <3.14"

dependencies = [
  # Linters
  "flake8 ~= 7.1",
  "isort ~= 5.10",
  "mypy == 0.991",
  "yapf==0.32.0",
  "ruff>=0.9.6",

  # The hardware package manager and build system.
  "fusesoc==2.4.5",

  # Build and run tool for Design Verification flows
  "dvsim==1.49.9",
]

[tool.uv]
# This is not a distributable package — pyproject.toml is used only for dependency management.
package = false

[tool.setuptools]
py-modules = []

[tool.ruff]
target-version = "py310"
line-length = 100
# Don't lint vendored files which must be fixed upstream.
extend-exclude = [ "*vendor*" ]

[tool.ruff.lint]
preview = true
explicit-preview-rules = true
extend-select = ["E", "E303", "W391"]
