# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

[project]
name = "caliptra-reg-gen"
version = "0.0.0"
description = "Register generation tooling for caliptra-rtl"
requires-python = ">=3.13, <3.14"

dependencies = [
  # SystemRDL compiler (version ceiling enforced by peakrdl-regblock)
  "systemrdl-compiler==1.27.3",

  # PeakRDL CLI umbrella (provides the `peakrdl` command)
  "peakrdl==1.1.0",

  # PeakRDL exporters
  "peakrdl-regblock==0.21.0",
  "peakrdl-uvm==2.3.0",
  "peakrdl-html==2.10.1",
]

[tool.uv]
# This is not a distributable package — pyproject.toml is used only for dependency management.
package = false

[tool.setuptools]
py-modules = []
